--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,40 +1,51 @@
+{% extends 'layout.html' %}
 
+{% block body %}
 <h1>Welcome back, {{session.get('name')}}</h1>
 {% include 'includes/_messages.html' %}
 <p></p>
 
 <p> Your current balance is {{ balance }} ACV</p>
-<div class="card mb-3">
-  <div class="card-header">
-    <i class="fas fa-chart-area"></i>
-    Price of Shockwave (ACV)</div>
-  <div class="card-body">
-    <canvas id="myAreaChart" width="100%" height="30"></canvas>
-  </div>
-  <div class="card-footer small text-muted">Updated today at {{ct}}</div>
-</div>
 
 <!-- DataTables Example -->
 <div class="card mb-3">
   <div class="card-header">
     <i class="fas fa-table"></i>
-    Blockchain</div>
+    Transactions</div>
   <div class="card-body">
     <div class="table-responsive">
       <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
         <thead>
           <tr>
             <th>#</th>
-            <th>Transaction</th>
+            <th>From</th>
+            <th>To</th>
+            <th>Amount</th>
             <th>Hash</th>
+            <th>Time</th>
           </tr>
         </thead>
+        <tfoot>
+          <tr>
+            <th>#</th>
+            <th>From</th>
+            <th>To</th>
+            <th>Amount</th>
+            <th>Hash</th>
+            <th>Time</th>
+
+          </tr>
+        </tfoot>
         <tbody>
           {% for block in blockchain %}
             <tr>
               <td>{{block.number}}</td>
-              <td>{{block.transaction}}</td>
+              <td>{{block.transaction.split("-->")[0]}} </td>
+              <td>{{block.transaction.split("-->")[1]}} </td>
+              <td>{{block.transaction.split("-->")[2]}} ACV</td>
               <td>{{block.hash()}}</td>
+              <td>{{block.timestamp}}</td>
+
             </tr>
           {% endfor %}
         </tbody>
@@ -43,3 +54,4 @@
   </div>
   <div class="card-footer small text-muted">Updated today at {{ct}}</div>
 </div>
+{% endblock %}
