--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -1,6 +1,8 @@
+{% extends 'layout.html' %}
 
+{% block body %}
 {% include 'includes/_messages.html' %}
-<p>Your current balance is {{ balance }} SHK</p>
+<p>Your current balance is {{ balance }} ACV</p>
 {% from "includes/_formhelpers.html" import render_field %}
 <form method="POST" action="">
   <div class="from-group">
@@ -12,4 +14,4 @@
   </br>
   <p><input type="submit" class="btn btn-primary" value="Send"></p>
 </form>
-<button onclick="window.location.href='/dashboard'">Dashboard</button>
+{% endblock %}
